Create theme app

--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.6.0",
+    "@react-native-picker/picker": "2.0.0",
     "expo": "~51.0.18",
+    "expo-document-picker": "~12.0.2",
+    "expo-image": "~1.12.12",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "3.10.0",
+    "react-native-svg": "^15.3.0",
+    "reanimated-color-picker": "2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
